@@ -19,7 +19,7 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpmime:4.1.1'
     implementation 'org.eclipse.jgit:org.eclipse.jgit:7.1.0.202411261347-r'
     implementation 'org.eclipse.jgit:org.eclipse.jgit.ssh.apache:7.1.0.202411261347-r'
-    implementation 'org.fxmisc.wellbehaved:wellbehavedfx:0.3.3'    
+    implementation 'org.fxmisc.wellbehaved:wellbehavedfx:0.3.3'
     implementation 'org.junit.jupiter:junit-jupiter:5.5.2'
     implementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     implementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
@@ -37,38 +37,48 @@ dependencies {
     testImplementation 'org.testfx:testfx-core:4.0.15-alpha'
     testImplementation 'org.testfx:testfx-junit:4.0.15-alpha'
     testImplementation 'org.testfx:openjfx-monocle:21.0.2'
+    testImplementation 'junit:junit:4.13.2'
 }
 
 compileJava {
     options.compilerArgs += [
         "-Xplugin:threadchecker.TCPlugin",
-        // we use some private packages/classes currently:
-        "--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"]
+    ]
 }
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
     options.release = 21
 }
 
+def testJvmArgs = // Headless is the default because headed GUI tests are quite a surprise and cause havoc:
+    (("true".equals(project.findProperty("headless")) || project.findProperty("headless") == null) ? [
+        // Headless:
+        '-Djava.awt.headless=true',
+        '-Dtestfx.robot=glass',
+        '-Dtestfx.headless=true',
+        '-Dprism.order=sw',
+        '-Dprism.text=t2k',
+        '-Dglass.platform=Monocle',
+        '-Dmonocle.platform=Headless',
+        '-Dheadless.geometry=1920x1200-32',
+        ] : [
+        // Headed:
+        '-Djava.awt.headless=false',
+        '-Dtestfx.robot=glass',
+        '-Dprism.text=t2k',
+    ])
+
 test {
+    maxParallelForks = 2 * Runtime.runtime.availableProcessors()
+
     useJUnit()
-    jvmArgs += 
-            // Headless is the default because headed GUI tests are quite a surprise and cause havoc:
-            (("true".equals(project.findProperty("headless")) || project.findProperty("headless") == null) ? [
-                    // Headless:
-                    '-Djava.awt.headless=true',
-                    '-Dtestfx.robot=glass',
-                    '-Dtestfx.headless=true',
-                    '-Dprism.order=sw',
-                    '-Dprism.text=t2k',
-                    '-Dglass.platform=Monocle',
-                    '-Dmonocle.platform=Headless',
-                    '-Dheadless.geometry=1920x1200-32'] : [
-                    // Headed:
-                    '-Djava.awt.headless=true',
-                    '-Dtestfx.robot=glass',
-                    '-Dprism.text=t2k',
-            ])
+
+    jvmArgs += testJvmArgs
+
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+    }
 }
 
 repositories {
@@ -124,7 +134,6 @@ task runBlueJ(type: JavaExec) {
     classpath sourceSets.main.runtimeClasspath
     main = "bluej.Boot"
     args "-bluej.debug=true"
-    //systemProperties(Map.of("javafx.sg.warn", "true"));
 }
 
 assemble.dependsOn blueJCoreJar
